--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^1.2.4"
+    "axios": "^1.2.4",
+    "uniqid": "^5.4.0"
   }
 }
